<resources>
    <string name="app_name">Police Management System</string>
    <string name="pickaddress"><i>Pick a Address</i></string>
    <string name="addressconformation">Conform Address</string>
    <string name="listofitems"><b><u>Items:</u></b></string>
    <string name="placedon"><b><u>Placed on:</u></b></string>
    <string name="address"><i><b><u>Address:</u></b></i></string>
    <string name="select">Select</string>
    <string name="changepassword">Change Password</string>
    <string name="action_settings">Settings</string>
    <string name="rs">\u20B9 /kg</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="loginfacebook">Log In FaceBook</string>
    <string name="logingoogle">Log In Google</string>
    <string name="enteryourpassword">Enter your password</string>
    <string name="enteryourmail">Enter your Email </string>
    <string name="enteryourmobile">Enter your Mobile No</string>
    <string name="enteremailmobile">Enter your Email/Mobile No</string>
    <string name="enteryourfirstname">Enter your First Name</string>
    <string name="enteryourlastname">Enter your Last Name</string>
    <string name="newuser">New User? <u><b>Join today</b></u></string>
    <string name="skipiwilldouitlater"></string>
    <string name="alreadyauser">Already have a accont? <u><b>Login Now</b></u></string>
    <string name="byjoiningyouagree">By joining you agree to our terms and condition</string>
    <string name="fullname">Enter full name</string>
    <string name="enterpincode">Enter Pincode</string>
    <string name="addresslinefirst">Address line</string>
    <string name="addresslinesecond">Address line (optional)</string>
    <string name="landmark">Landmark (optional)</string>
    <string name="add">Add</string>
</resources>
