<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="100"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="28"
        android:padding="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create a New\nAccount"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:typeface="monospace"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/customer_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourmobile"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="16sp"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_mobile_icon"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/customer_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourpassword"
                android:inputType="textPassword"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_password"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/customer_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourfirstname"
                android:textColorHint="@color/hint"
                android:textSize="16sp"
                android:singleLine="true"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_profile_pic"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/customer_last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourlastname"
                android:textSize="16sp"
                android:textColorHint="@color/hint"
                android:singleLine="true"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_profile_pic"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/customer_email_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourmail"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:singleLine="true"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_email_icon_hi"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:layout_weight="6">
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioButton"
            android:layout_width="fill_parent"
            android:layout_height="40sp"
            android:orientation="horizontal"
            android:singleLine="true">
            <RadioButton android:id="@+id/radio_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male" />
            <RadioButton android:id="@+id/radio_femail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female" />
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingBottom="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/byjoiningyouagree"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/hint" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="9">
        <Button
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/login_button"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:onClick="singUp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/alreadyauser"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/holo_purple"
            android:onClick="loginNow"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="6dp">

    </RelativeLayout>
</LinearLayout>