<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login to BinBasket"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:typeface="monospace"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/customer_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourmobile"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="16sp"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_email_icon_hi"/>
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="8">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/customer_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_2"
                android:paddingLeft="70dp"
                android:hint="@string/enteryourpassword"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:textColorHint="@color/hint"
                android:paddingRight="10dp">
                <requestFocus/>
            </EditText>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:src="@drawable/ic_password"/>
        </FrameLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="9">
        <Button
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/login_button"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:onClick="logIn"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/newuser"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:onClick="joinToday"
            android:visibility="visible"
            android:textColor="@android:color/holo_purple"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
    </RelativeLayout>

</LinearLayout>